--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ecourse
+spring.datasource.username=root
+spring.datasource.password=0377019134tT@
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
