--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.jpa.hibernate.ddl-auto= update
-spring.datasource.url=jdbc:mysql://localhost:3306/bussines?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+spring.jpa.hibernate.ddl-auto= create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/business?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
 spring.datasource.password=0377019134tT@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
